--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,12 @@
     package="com.example.toko">
 
     <application
-        android:allowBackup="true"
+         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
         <activity android:name=".Splash"
             android:theme="@style/Splash">
             <intent-filter>
@@ -17,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Login"
+            android:theme="@style/Login"> </activity>
+        <activity android:name=".MainActivity"> </activity>
+
     </application>
 
 </manifest>
